--- a/public/search.html
+++ b/public/search.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    krishna kanhaiya
+
+<script src="/public/search.js"></script>
+   <ul id="results"></ul>
 </body>
 </html>
