--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,39 @@
 <!Doctype html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="public/app.css">
- </head>
-<body> 
-<div id=logo>
-<h1 id=achoz> Achoz</h1>
-</div>
-<div id=search_div>
-<div id=input1 >
-<form action="/search">
-                <input type="text"
-                    placeholder="Type here.."
-                    name="q">
-                <button>
-                    <i class="search"
-                        style="font-size: 18px;"> Search
-                    </i>
-                </button>
-</form>
 
-</div>
-<ul id=results ></ul>
-</div>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/app.css">
+</head>
+
+<body>
+    <div id=logo>
+        <h1 id=achoz> Achoz</h1>
+    </div>
+    <div id=search_div>
+        <div id=input1>
+            <form action="/search">
+
+
+                <input type="text" placeholder="Type here.." name="q">
+
+
+                <button>
+
+
+                    <i class="search" style="font-size: 18px;"> Search
+
+
+                    </i>
+
+
+                </button>
+
+            </form>
+
+        </div>
+        <ul id=results></ul>
+    </div>
 
 </body>
+
 </html>
