added next and prev mechnism in result

--- a/public/search.html
+++ b/public/search.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-
 <script src="/public/search.js"></script>
    <ul id="results"></ul>
+<a href="#" id="previous"> Previous</a>
+<a href="#" id="next">Next</a>
 </body>
 </html>
