--- a/public/search.html
+++ b/public/search.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <div id=search_div>
+    <div id="searchbar">
         <div id=input1>
             <form action="/search">
                 <input id="search_input" type="text" placeholder="Type here.." name="q">
-                <button> <i class="search" style="font-size: 18px;"> Search </i></button>
+                <button id="sbutton"> Go</button>
             </form>
         </div>
     </div>
-        <ul id="results"></ul>
+    <ul id="results"></ul>
 
-    <div id="next-pre" >
+    <div id="next-pre">
         <a href="#" id="previous"> Previous</a>
         <a href="#" id="next">Next</a>
     </div>
