--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,13 @@
     <div id=logo>
         <h1 id=achoz> Achoz</h1>
     </div>
-    <div id=search_div>
-        <div id=input1>
-            <form action="/search">
-
-
-                <input type="text" placeholder="Type here.." name="q">
-
-
-                <button>
-
-
-                    <i class="search" style="font-size: 18px;"> Search
-
-
-                    </i>
-
-
-                </button>
-
-            </form>
-
-        </div>
-        <ul id=results></ul>
+    <div id="input1">
+        <form action="/search">
+            <input type="text" placeholder="Type here.." name="q">
+            <button id="sbutton">Go</button>
+        </form>
     </div>
+    <ul id=results></ul>
 
 </body>
 
