improve search results

--- a/public/search.html
+++ b/public/search.html
@@ -18,11 +18,11 @@
             </form>
         </div>
     </div>
-    <ul id="results"></ul>
+    <div id="results" ></div>
 
     <div id="next-pre">
-        <a href="#" id="previous"> Previous</a>
-        <a href="#" id="next">Next</a>
+        <a href="#" class="previous"> Previous</a>
+        <a href="#" class="next">Next</a>
     </div>
     <script src="/public/search.js"></script>
 </body>
