fix nex pre insearch.js

--- a/public/search.html
+++ b/public/search.html
@@ -21,8 +21,8 @@
     <div id="results" ></div>
 
     <div id="next-pre">
-        <a href="#" class="previous"> Previous</a>
-        <a href="#" class="next">Next</a>
+        <a href="#" id="previous"> Previous</a>
+        <a href="#" id="next">Next</a>
     </div>
     <script src="/public/search.js"></script>
 </body>
