--- a/public/search.html
+++ b/public/search.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/public/app.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div id="searchbar">
-        <div id=input1>
-            <form action="/search">
-                <input id="search_input" type="text" placeholder="Type here.." name="q">
-                <button id="sbutton"> Go</button>
-            </form>
-        </div>
+    <div id="wrap">
+
+        <form action="/search">
+        <div id="searchbar">
+                <input id="input" type="text" placeholder="Type here.." name="q">
+                <button id="sbutton"> <i class="fa fa-search"></i></button>
+            </div>
+        </form>
     </div>
     <div id="results" ></div>
 
     <div id="next-pre">
-        <a href="#" id="previous"> Previous</a>
-        <a href="#" id="next">Next</a>
+        <a href="#" id="previous"> <i class="fa fa-angle-double-left"></i></a>
+        <a href="#" id="next"><i class="fa fa-angle-double-right"></i></a>
     </div>
     <script src="/public/search.js"></script>
 </body>
