--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 
 <head>
+    <title>Achoz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="public/app.css">
