--- a/public/search.html
+++ b/public/search.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/public/app.css">
-    <title>Document</title>
+    <title>Achoz</title>
 </head>
 
 <body>
