index.js:remove achoz text

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id=logo>
-        <h1 id="achoz"> Achoz</h1>
+        <!-- <h1 id="achoz"> Achoz</h1> -->
     </div>
     <div id="wrap">
 
