frontened: major changes.... (#34)
* frontened: major changes....
changed background image
added icon for filetype
added home button

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,11 +3,13 @@
 <head>
     <title>Achoz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="public/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css">
+    <link rel="stylesheet" href="public/css/app.css">
 </head>
 
 <body>
+    <div id="home"><a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
+    </div>
     <div id=logo>
         <!-- <h1 id="achoz"> Achoz</h1> -->
     </div>
