--- a/achoz/static/html/index.html
+++ b/achoz/static/html/index.html
@@ -4,7 +4,7 @@
     <title>Achoz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css">
-    <link rel="stylesheet" href="public/css/app.css">
+    <link rel="stylesheet" href="static/css/app.css">
 </head>
 
 <body>
