--- a/achoz/static/html/search.html
+++ b/achoz/static/html/search.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css">
-    <link rel="stylesheet" href="/public/css/app.css">
+    <link rel="stylesheet" href="static/css/app.css">
     <title>Achoz</title>
 </head>
 
@@ -25,7 +25,7 @@
         <a href="#" id="previous"> <i class="fa fa-angle-double-left"></i></a>
         <a href="#" id="next"><i class="fa fa-angle-double-right"></i></a>
     </div>
-    <script src="/public/js/search.js"></script>
+    <script src="static/js/search.js"></script>
 </body>
 
 </html>
