frontend: added query info feature

--- a/achoz/static/html/search.html
+++ b/achoz/static/html/search.html
@@ -20,11 +20,9 @@
             </div>
         </form>
     </div>
+    <div id="query-info"></div>
     <div id="results" ></div>
-    <div id="next-pre">
-        <a href="#" id="previous"> <i class="fa fa-angle-double-left"></i></a>
-        <a href="#" id="next"><i class="fa fa-angle-double-right"></i></a>
-    </div>
+    <div id="next-pre"></div>
     <script src="static/js/search.js"></script>
 </body>
 
