frontened: achoz logo on home

--- a/achoz/static/html/index.html
+++ b/achoz/static/html/index.html
@@ -11,7 +11,7 @@
     <div id="home"><a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
     </div>
     <div id=logo>
-        <!-- <h1 id="achoz"> Achoz</h1> -->
+        <img src="/static/img/achoz.png" alt="">
     </div>
     <div id="wrap">
 
